update my code